--- a/package.json
+++ b/package.json
@@ -74,8 +74,8 @@
     "webpack-merge": "^4.1.2"
   },
   "engines": {
-    "node": ">= 6.0.0",
-    "npm": ">= 3.0.0"
+    "node": "10.19.0",
+    "npm": "6.14.4"
   },
   "browserslist": [
     "> 1%",
