--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "express": "^4.16.2",
     "js-cookie": "^2.2.1",
     "mongoose": "^5.0.9",
-    "npm": "^5.7.1",
+    "npm": "6.14.4",
     "vue": "^2.5.2",
     "vue-notification": "^1.3.7",
     "vue-resource": "^1.5.0",
